# thisabled-backend

./: .env.example  .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
alembic/: env.py
alembic/versions/: 1b6256234fd5_schema_v2_auth_mode.py  84e58e0eefae_schema_v3_baseline.py  a31f5b6c8d9e_message_available_at.py  e521e38f5e0b_init_schema_v1.py  f7b9114a3c2e_chat_read_states.py
app/: main.py
app/core/: age.py  config.py  deps.py  enums.py  modes.py  pairs.py  security.py  storage.py
app/db/: redis.py  session.py
app/models/: __init__.py  chat.py  message.py  misc.py  post.py  report.py  social.py  user.py
app/schemas/: auth.py  chat.py  media.py  mode.py  post.py  social.py  stt.py  user.py  vision.py
app/services/: ai_media.py  chat.py  comm.py  events.py  stt.py  (+10 more)
docs/: ThisAbled_기능명세서_v2_1.md  ThisAbled_기능명세서_v2_2.md  api.md  architecture.drawio  deploy-tailscale-funnel.md  deploy-tunnel.md  erd.dbml  function-flow.drawio  oauth-setup.md
graphify-out/: .graphify_labels.json  .graphify_learning.json  .graphify_python  .graphify_root  .vocab.txt  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
mocks/: match_model.py  safety_model.py
tests/: conftest.py  test_age.py  test_auth.py  test_chat.py  test_comm.py  test_config.py  test_friends.py  test_match.py  test_media.py  test_mode.py  test_notifications.py  test_oauth_real.py  test_posts.py  test_quota.py  test_safe.py  test_schema.py  test_stt.py  test_users.py  test_vision.py  test_withdrawal.py  test_ws.py
(+51 files in other folders)
