[project]
name = "thisabled-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic-settings==2.2.1",
    "sqlalchemy==2.0.29",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "redis==5.0.4",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.0.1",
    "python-multipart==0.0.9",
    "httpx==0.27.0",
    "aiofiles==23.2.1",
]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
]
